examples/errors/e0120.sdm
module example <https://example.com/api> is

  structure Foo

  structure Bar is
    name in Foo
  end

end
